# a2a_langgraph

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  test_math_agent.py
docs/: agent_card_flow.md  sequence_diagram.md
examples/: client_example.py
scripts/: start_servers.py
src/a2a/: protocol.py  server.py
src/agents/: math_agent.py  orchestrator.py  research_agent.py
src/mcp/: math_tools.py  research_tools.py
src/utils/: bedrock_client.py  config.py  logging_config.py
tests/: test_agents.py
