[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-langgraph-multiagent"
version = "0.1.0"
description = "Multi-agent system using LangGraph and A2A with Amazon Bedrock Claude 3.5 Sonnet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.162",
    "langchain>=0.2.14",
    "langchain-aws>=0.1.15",
    "langgraph>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.8.2",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "numpy>=1.26.4",
    "sympy>=1.12",
    "python-dotenv>=1.0.1",
    "aiofiles>=23.2.1",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "PIE", "T20"]
ignore = ["E501"]
